--- a/Feedbacksystem/templates/pages/faculty_events_upcoming.html
+++ b/Feedbacksystem/templates/pages/faculty_events_upcoming.html
@@ -28,7 +28,7 @@
 
 {% for i in upcoming_events %}
   
-<div class="card border-0">
+<div class="card ">
     <div class="card-body">
     {% if i.event_picture %}
     <img src="{{ i.event_picture.url }}"  class="card-img-top img-fluid"  alt="Event Thumbnail">
