--- a/Feedbacksystem/templates/pages/faculty_school_event_form.html
+++ b/Feedbacksystem/templates/pages/faculty_school_event_form.html
@@ -1,4 +1,4 @@
-{% extends "pages/home.html" %}
+{% extends "pages/facultydashboard.html" %}
 {% load static %}
 {% block title %}Event Evaluation Form{% endblock %}
 
@@ -21,7 +21,7 @@
                         <div style="width: 100%; margin-left: 3em;">Very Satisfactory</div>      
                         <div style="width: 100%; margin-right: 5em; margin-left:2em;">Satisfactory</div> 
                         <div style="width: 100%; margin-right: 6.5em;">Fair</div>        
-                        <div style="width: 100%; margin-right: 2em;">Poor</div> </th>
+                        <div style="width: 100%; margin-right: 2.4em;">Poor</div> </th>
                 </tr>
                 {% for question in questions %}
                 <tr>
