--- a/Feedbacksystem/templates/pages/section_details.html
+++ b/Feedbacksystem/templates/pages/section_details.html
@@ -74,7 +74,7 @@
             <td>{{ i.faculty.first_name }} {{ i.faculty.last_name }}</td>
             <td style="display: flex; flex-direction: row; gap:1em; align-items: center;"> 
   
-              <a href="{% url 'deleteSub_Section'  i.pk  %}" style="text-decoration: none;"><button class="btn btn-danger d-flex align-items-center" style="padding:4px 7px 4px 7px" ><i style="font-size:20px; margin-right: 5px;" class='bx bxs-trash' ></i>Delete</button></a>
+              <a href="{% url 'deleteSub_Section'  i.pk  %}" style="text-decoration: none;"><button class="btn btn-danger d-flex align-items-center" style="padding:4px 2px 4px 7px" ><i style="font-size:24px; margin-right: 5px;" class='bx bxs-trash' ></i></button></a>
   
               </td>
     </tr>
