--- a/Feedbacksystem/templates/pages/view_department.html
+++ b/Feedbacksystem/templates/pages/view_department.html
@@ -18,7 +18,7 @@
                 <th scope="col">Gender</th>
                 <th scope="col">Email</th>
                 <th scope="col">Contact Number</th>
-                <th scope="col">Options</th>                
+                <th scope="col" style="width: 160px;">Options</th>                
             </tr>
 
     </thead>
@@ -28,12 +28,12 @@
             <td>{{ i.gender }}</td>
             <td>{{ i.email }}</td>
             <td>{{ i.contact_number }}</td> 
-            <td style="display: flex; flex-direction: row; gap:1em; align-items: center;"> <a href="{% url 'facultyevaluations' i.pk %}" style="text-decoration: none;"><button class="btn btn-primary d-flex align-items-center" style=" padding:1px 7px 1px 7px"><i class="bi bi-eye-fill" style="font-size:20px; margin-right: 5px;"></i> View</button></a>
+            <td style="display: flex; flex-direction: row; gap:1em; align-items: center; width: 160px;"> <a href="{% url 'facultyevaluations' i.pk %}" style="text-decoration: none;"><button class="btn btn-primary d-flex align-items-center" style=" padding:1px 2px 1px 7px"><i class="bi bi-eye-fill" style="font-size:20px; margin-right: 5px;"></i> </button></a>
 
-                <a href="{% url 'editteacher'  i.pk  %}" style="text-decoration: none;"><button class="btn btn-warning d-flex align-items-center" style=" padding:1px 7px 1px 7px"><i class="bi bi-pencil-square" style="font-size:20px; margin-right: 5px;"></i>Edit</button></a>
-  
-                <a href="{% url 'deleteTeacher'  i.pk  %}" style="text-decoration: none;"><button class="btn btn-danger d-flex align-items-center" style="padding:4px 7px 4px 7px" ><i style="font-size:20px; margin-right: 5px;" class='bx bxs-trash' ></i>Delete</button></a>
-  
+                <a href="{% url 'editteacher'  i.pk  %}" style="text-decoration: none;"><button class="btn btn-warning d-flex align-items-center" style=" padding:1px 2px 1px 7px"><i class="bi bi-pencil-square" style="font-size:20px; margin-right: 5px;"></i></button></a>
+    
+                <a href="{% url 'deleteTeacher'  i.pk  %}" style="text-decoration: none;"><button class="btn btn-danger d-flex align-items-center" style="padding:4px 2px 4px 7px" ><i style="font-size:24px; margin-right: 5px;" class='bx bxs-trash' ></i></button></a>
+    
                 </td>
     </tr>
 
