--- a/Feedbacksystem/static/css/adminpage.css
+++ b/Feedbacksystem/static/css/adminpage.css
@@ -1,8 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 
 body{
   background-color:  #faf5fF;
   color: #333;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 th{
   color: #ffffff !important; 
@@ -213,7 +220,9 @@ background-color: #ff9400;
 margin-left: -0.5em !important;
 margin-top: 1em;
 }
-
+.options_column{
+  height: 200px  !important ;
+}
 }
 
 @media (max-width: 600px){
@@ -224,6 +233,7 @@ margin-top: 1em;
 #profile_name{
   width: 100%;
 }
+
 }
 
 @media (max-width: 575px){
@@ -231,6 +241,7 @@ margin-top: 1em;
 margin-top: 1em;
 margin-left: 0.5em;
 }
+
 }
   
  
