--- a/Feedbacksystem/templates/pages/admin_event_evaluations.html
+++ b/Feedbacksystem/templates/pages/admin_event_evaluations.html
@@ -43,7 +43,7 @@
             <td> {{ i.get_rating_category }}</td>
     
     
-            <td>...</td>
+            <td>{{ i.predicted_sentiment }}</td>
     
     
             <td> {{ i.academic_year }}</td>
@@ -51,8 +51,8 @@
     
             <td> {{ i.semester }}</td>
 
-            <td style="display: flex; flex-direction: row; align-items: center; "> 
-                 <a href="{% url 'view_admin_schoolevent_evaluations' i.pk %}"><button class="btn btn-primary d-flex align-items-center" style="  padding:1px 7px 1px 7px"><i class="bi bi-eye-fill" style="font-size:20px; margin-right: 5px;"></i>View</button></a> 
+            <td style="display: flex; flex-direction: row; align-items: center; justify-content: center; "> 
+                 <a href="{% url 'view_admin_schoolevent_evaluations' i.pk %}"><button class="btn btn-primary d-flex align-items-center" style=" padding:1px 2px 1px 7px"><i class="bi bi-eye-fill" style="font-size:20px; margin-right: 5px;"></i></button></a> 
                   </td>
      </tr>
     
