--- a/Feedbacksystem/templates/pages/facultyevaluations.html
+++ b/Feedbacksystem/templates/pages/facultyevaluations.html
@@ -13,36 +13,38 @@
 {% if avg_rating %}
   <p><strong>Total Average Rating: {{ avg_rating|floatformat:1 }} </strong></p>
 {% endif %}
-<table class="table table-bordered table-responsive  ">
-    <tr>
-        <th scope="col">Subject</th>
-        <th scope="col">Average</th>
-        <th scope="col">Rating</th>
-        <th scope="col">Overall Impression</th>
-        <th scope="col">Polarity</th>
-        <th scope="col">Academic Year</th>
-        <th scope="col">Semester</th>
-        <th scope="col">Options</th>        
-    </tr>
-    {% for i in teacher_evaluations %}
-    <tr>
-        <td>{{ i.section_subject_faculty.subjects }} </td>
-        <td>{{ i.average_rating }}</td>
-        <td>{{ i.get_rating_category }}</td>
-        <td>{{ i.comments }}</td>
-        <td>{{ i.predicted_sentiment }}</td>
-        <td>{{ i.academic_year }}</td>
-        <td>{{ i.semester }}</td>
-        <td style="display: flex; flex-direction: row; align-items: center; height: 100px;"> 
-
-            <a style="margin-right: 10px; text-decoration: none;" href="{% url 'admin_view_evaluation_form'  i.pk  %}"><button class="btn btn-primary d-flex align-items-center" style=" padding:1px 7px 1px 7px"><i class="bi bi-eye-fill" style="font-size:20px; margin-right: 5px;"></i>View</button></a>
-            
-            <a style="margin-right: 10px; text-decoration: none;" href="{% url 'deleteEvaluation'  i.pk  %}"><button class="btn btn-danger d-flex align-items-center" style="padding:4px 7px 4px 7px"  ><i style="font-size:20px; margin-right: 5px;" class='bx bxs-trash' ></i>Delete</button></a>
-
-    </td>
-    </tr>
-
-    {% endfor %}
-
-</table>
+<div class="table-responsive">
+    <table class="table table-bordered table-responsive  ">
+        <tr>
+            <th scope="col">Subject</th>
+            <th scope="col">Average</th>
+            <th scope="col">Rating</th>
+            <th scope="col">Overall Impression</th>
+            <th scope="col">Polarity</th>
+            <th scope="col">Academic Year</th>
+            <th scope="col">Semester</th>
+            <th scope="col">Options</th>
+        </tr>
+        {% for i in teacher_evaluations %}
+        <tr>
+            <td>{{ i.section_subject_faculty.subjects }} </td>
+            <td>{{ i.average_rating }}</td>
+            <td>{{ i.get_rating_category }}</td>
+            <td>{{ i.comments }}</td>
+            <td>{{ i.predicted_sentiment }}</td>
+            <td>{{ i.academic_year }}</td>
+            <td>{{ i.semester }}</td>
+            <td style="display: flex; flex-direction: row; align-items: center; height: 100px;">
+    
+                <a style="margin-right: 10px; text-decoration: none;" href="{% url 'admin_view_evaluation_form'  i.pk  %}"><button class="btn btn-primary d-flex align-items-center" style=" padding:1px 2px 1px 7px"><i class="bi bi-eye-fill" style="font-size:20px; margin-right: 5px;"></i></button></a>
+    
+                <a style="margin-right: 10px; text-decoration: none;" href="{% url 'deleteEvaluation'  i.pk  %}"><button class="btn btn-danger d-flex align-items-center" style="padding:4px 2px 4px 7px"  ><i style="font-size:24px; margin-right: 5px;" class='bx bxs-trash' ></i></button></a>
+    
+        </td>
+        </tr>
+    
+        {% endfor %}
+    
+    </table>
+</div>
 {% endblock feature %}
