--- a/Feedbacksystem/templates/pages/login.html
+++ b/Feedbacksystem/templates/pages/login.html
@@ -18,7 +18,7 @@
     {% if messages %}
     <div class="container  col-md-5 col-12 mt-5 pt-5">
         {% for message in messages %}
-        <div class="alert alert-primary alert-dismissible fade show" role="alert">
+        <div class="alert alert-light alert-dismissible fade show" role="alert">
             {{ message }}
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
