--- a/Feedbacksystem/templates/pages/stakeholderevaluations.html
+++ b/Feedbacksystem/templates/pages/stakeholderevaluations.html
@@ -87,13 +87,13 @@
               <td>{{ i.purpose }}</td>
               <td>{{ i.average_rating }}</td>
               <td>{{ i.suggestions_and_comments }}</td>
-              <td>...</td>
+              <td>{{ i.predicted_sentiment }}</td>
               <td>{{ i.academic_year }}</td>
               <td>{{ i.semester }}</td>
-              <td style="display: flex; flex-direction: row; align-items: center; height: 100px;">
+              <td style="display: flex; flex-direction: row; align-items: center;">
                 <a href="{% url 'admin_view_stakeholder_form' i.pk %}" style="margin-right: 10px; text-decoration: none;">
-                  <button class="btn btn-primary d-flex align-items-center" style=" padding:1px 7px 1px 7px">
-                    <i class="bi bi-eye-fill" style="font-size:20px; margin-right: 5px;"></i>View</button></a>
+                  <button class="btn btn-primary d-flex align-items-center" style=" padding:1px 2px 1px 7px">
+                    <i class="bi bi-eye-fill" style="font-size:20px; margin-right: 5px;"></i></button></a>
     
           </tr>
           {% endfor %}
