--- a/Feedbacksystem/templates/pages/users.html
+++ b/Feedbacksystem/templates/pages/users.html
@@ -78,9 +78,9 @@
                 </td>
                 <td style="display: flex; flex-direction: row; align-items: center;"> 
 
-                    <a style="margin-right: 10px; text-decoration: none;" href="{% url 'edit_user_group'  user.username  %}"><button class="btn btn-warning d-flex align-items-center" style=" padding:1px 7px 1px 7px"><i class="bi bi-pencil-square" style="font-size:20px; margin-right: 5px;"></i>Edit</button></a>
+                    <a style="margin-right: 10px; text-decoration: none;" href="{% url 'edit_user_group'  user.username  %}"><button class="btn btn-warning d-flex align-items-center" style=" padding:1px 2px 1px 7px"><i class="bi bi-pencil-square" style="font-size:20px; margin-right: 5px;"></i></button></a>
                     
-                    <a style="margin-right: 10px; text-decoration: none;" href="{% url 'delete_user'  user.username  %}"><button class="btn btn-danger d-flex align-items-center" style="padding:4px 7px 4px 7px"  ><i style="font-size:20px; margin-right: 5px;" class='bx bxs-trash' ></i>Delete</button></a>
+                    <a style="margin-right: 10px; text-decoration: none;" href="{% url 'delete_user'  user.username  %}"><button class="btn btn-danger d-flex align-items-center" style="padding:4px 2px 4px 7px"  ><i style="font-size:24px; margin-right: 5px;" class='bx bxs-trash' ></i></button></a>
         
                   </td>
              
